@@ -1,3 +1,10 @@
+2015-04-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/peep.c,
+	  support/regression/tests/z88dk.c:
+	  Fix peephole optimizer bug #2371.
+
 2015-04-19 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCglobl.h:
